--- a/CHAT_GPT/summary.ipynb
+++ b/CHAT_GPT/summary.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'openai'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\T0727638E\\OneDrive - Ministry of Education (M365 T&L)\\Documents\\GitHub\\Smart-Lecture-Summary\\CHAT_GPT\\summary.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/T0727638E/OneDrive%20-%20Ministry%20of%20Education%20%28M365%20T%26L%29/Documents/GitHub/Smart-Lecture-Summary/CHAT_GPT/summary.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenai\u001b[39;00m\u001b[39m,\u001b[39m \u001b[39mos\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/T0727638E/OneDrive%20-%20Ministry%20of%20Education%20%28M365%20T%26L%29/Documents/GitHub/Smart-Lecture-Summary/CHAT_GPT/summary.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mopenai\u001b[39;00m \u001b[39mimport\u001b[39;00m OpenAI\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/T0727638E/OneDrive%20-%20Ministry%20of%20Education%20%28M365%20T%26L%29/Documents/GitHub/Smart-Lecture-Summary/CHAT_GPT/summary.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdotenv\u001b[39;00m \u001b[39mimport\u001b[39;00m load_dotenv, dotenv_values\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'openai'"
+     ]
+    }
+   ],
    "source": [
     "import openai, os\n",
     "from openai import OpenAI\n",
@@ -16,6 +28,7 @@
     "load_dotenv() #generate the environment\n",
     "\n",
     "openai.api_key = os.getenv('OPENAI_API_KEY') #environment api key\n",
+    "print(openai.api_key)\n",
     "\n",
     "client = OpenAI()\n",
     "\n",
@@ -201,27 +214,24 @@
     "            end += 3482\n",
     "        summary = ''\n",
     "        for i in range(0, times):\n",
-    "            response = openai.completions.create(\n",
-    "            model=\"gpt-3.5-turbo-1106\",\n",
-    "#   response_format={ \"type\": \"json_object\" },\n",
-    "#   messages=[\n",
-    "#     {\"role\": \"system\", \"content\": \"You are a helpful assistant designed to output JSON.\"},\n",
-    "#     {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"}\n",
-    "#   ]\n",
-    "# )\n",
-    "# print(response.choices[0].message.content)\n",
-    "            prompt = prompt_lst[i],\n",
-    "            max_tokens = 500\n",
-    "            )\n",
+    "            response = client.chat.completions.create(\n",
+    "  model=\"gpt-3.5-turbo\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"system\", \"content\": \"You are a professional essay writer and is good at summarising lectures.\"},\n",
+    "    {\"role\": \"user\", \"content\": prompt}\n",
+    "  ]\n",
+    ")\n",
     "            summary += response.choices[0].text.strip()\n",
     "            summary += \"HERE IS THE BREAK\"\n",
     "        return summary\n",
     "    else:\n",
-    "        response = openai.client.completion.create(\n",
-    "        engine = \"text-davinci-003\",\n",
-    "        prompt = prompt,\n",
-    "        max_tokens = 500\n",
-    "        )\n",
+    "        response = client.chat.completions.create(\n",
+    "  model=\"gpt-3.5-turbo\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"system\", \"content\": \"You are a professional essay writer and is good at summarising lectures.\"},\n",
+    "    {\"role\": \"user\", \"content\": prompt}\n",
+    "  ]\n",
+    ")\n",
     "        return response.choices[0].text.strip()\n",
     "\n",
     "#the output\n",
@@ -237,7 +247,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
