fix env var error

--- a/CHAT_GPT/summary.ipynb
+++ b/CHAT_GPT/summary.ipynb
@@ -30,7 +30,7 @@
     "openai.api_key = os.getenv('OPENAI_API_KEY') #environment api key\n",
     "print(openai.api_key)\n",
     "\n",
-    "client = OpenAI()\n",
+    "client = OpenAI(api_key = openai.api_key)\n",
     "\n",
     "#4097 max tokens (using gpt2 tokenizer)\n",
     "\n",
@@ -199,29 +199,38 @@
     "    prompt = \"Can you summarize the main ideas of this lecture:\" + lecture_content\n",
     "\n",
     "    tokens = nltk.word_tokenize(prompt)\n",
+    "    print(f\"total length of tokens in lecture: {len(tokens)}\")\n",
     "\n",
-    "    if len(tokens) > 3482: #splitting up the lecture length into different length and summarise it separately\n",
+    "    if len(tokens) > 3048: #splitting up the lecture length into different length and summarise it separately\n",
     "        prompt_lst = []\n",
-    "        if len(tokens) % 3482 != 0:\n",
-    "            times = len(tokens) // 3482 + 1\n",
+    "        if len(tokens) % 3048 != 0:\n",
+    "            times = len(tokens) // 3048 + 1\n",
     "        else:\n",
-    "            times = len(tokens) / 3482\n",
+    "            times = len(tokens) / 3048\n",
     "        start = 0\n",
-    "        end = 3482\n",
+    "        end = 3048\n",
     "        for i in range(times):\n",
-    "            prompt_lst.append(prompt[start: end])\n",
-    "            start += 3482\n",
-    "            end += 3482\n",
+    "            if i + 1 != times:\n",
+    "                prompt_lst.append(prompt[start: end])\n",
+    "                start += 3048\n",
+    "                end += 3048\n",
+    "            else:\n",
+    "                prompt_lst.append(prompt[start:len(tokens)])\n",
+    "        print(f\"Number of sets of prompts: {len(prompt_lst)}\")\n",
+    "        for i in range(times):\n",
+    "            print(f\"Length of prompt{i}: {len(prompt_lst[i])}\")\n",
+    "        \n",
     "        summary = ''\n",
     "        for i in range(0, times):\n",
     "            response = client.chat.completions.create(\n",
     "  model=\"gpt-3.5-turbo\",\n",
     "  messages=[\n",
     "    {\"role\": \"system\", \"content\": \"You are a professional essay writer and is good at summarising lectures.\"},\n",
-    "    {\"role\": \"user\", \"content\": prompt}\n",
-    "  ]\n",
+    "    {\"role\": \"user\", \"content\": prompt_lst[i]}\n",
+    "  ],\n",
+    "#   max_tokens=400\n",
     ")\n",
-    "            summary += response.choices[0].text.strip()\n",
+    "            summary += response.choices[0].message.content.strip()\n",
     "            summary += \"HERE IS THE BREAK\"\n",
     "        return summary\n",
     "    else:\n",
@@ -230,9 +239,10 @@
     "  messages=[\n",
     "    {\"role\": \"system\", \"content\": \"You are a professional essay writer and is good at summarising lectures.\"},\n",
     "    {\"role\": \"user\", \"content\": prompt}\n",
-    "  ]\n",
+    "  ],\n",
+    "#   max_tokens=400\n",
     ")\n",
-    "        return response.choices[0].text.strip()\n",
+    "        return response.choices[0].message.content.strip()\n",
     "\n",
     "#the output\n",
     "response = get_completion(lecture_content)\n",
